<resources>
    <string name="app_name">Agmail</string>
    <string name="user_login">用户登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="edit_name">输入用户名</string>
    <string name="edit_password">输入密码</string>
    <string name="login">登录</string>
    <!-- Strings used for fragments for navigation -->

    <string name="remember_password">记住密码</string>
    <string name="register_button_check">注册</string>
</resources>
